cli/tests/snapshot/inputs/errors/simple_contract_fail.ncl
# capture = 'stderr'
# command = ['eval']
1 | String
